图片下载功能更新

--- a/src/clientWeb/index.html
+++ b/src/clientWeb/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全栈模板</title>
+    <style>
+      body {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app" style="height: 99vh; width: 100vw; position: absolute; top: 0; left: 0; padding: 0px"></div>
