--- a/src/clientWeb/index.html
+++ b/src/clientWeb/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>全栈模板</title>
+    <title>django_vue_template</title>
     <style>
       body {
         -webkit-user-select: none;
