1. optimized front top menu, add tailwindcss 2. add permission group edit page.

--- a/src/clientWeb/index.html
+++ b/src/clientWeb/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <div id="app" style="height: 99vh; width: 100vw; position: absolute; top: 0; left: 0; padding: 0px"></div>
+    <div id="app" class="w-full pl-px pr-px overflow-hidden"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
